--- a/data_preperation.ipynb
+++ b/data_preperation.ipynb
@@ -9,9 +9,9 @@
     "import pandas as pd\n",
     "\n",
     "# Read in CSV File\n",
-    "season_box = pd.read_csv('season_box_scores_20192020.csv', converters={'GAME_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\n",
+    "season_box = pd.read_csv('season_box_scores_20182019.csv', converters={'GAME_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\n",
     "season_games = pd.read_csv(\n",
-    "    'season_games_20192020.csv', converters={'Game_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\\\n",
+    "    'season_games_20182019.csv', converters={'Game_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\\\n",
     "\n",
     "# Define columns to keep from games dataframe\n",
     "col_keep = ['W_PCT', 'FG_PCT', 'FG3_PCT',\n",
@@ -26,7 +26,7 @@
    "source": [
     "# Group by GAME_ID in season_20_21_box and keep only first two rows\n",
     "season_box = season_box.groupby(\n",
-    "    'GAME_ID').head(2).reset_index(drop=True)\n"
+    "    'GAME_ID').head(2).reset_index(drop=True)"
    ]
   },
   {
@@ -252,13 +252,13 @@
    "outputs": [],
    "source": [
     "# Get unique values of Game_ID column in season_20_21_games\n",
-    "game_ids = season_20_21_games['Game_ID'].unique()\n",
+    "game_ids = season_games['Game_ID'].unique()\n",
     "\n",
     "season_box_ext = pd.DataFrame(columns=season_box.columns)\n",
     "\n",
     "for id in game_ids:\n",
     "    # Get all rows with id in Game_ID column\n",
-    "    df_game = season_20_21_games[season_20_21_games['Game_ID'] == id]\n",
+    "    df_game = season_games[season_games['Game_ID'] == id]\n",
     "    # Split MATCHUP column string at 'vs.' and strip whitespace\n",
     "    matchup_split = df_game.iloc[0]['MATCHUP'].split(' ')\n",
     "    team_one = matchup_split[0].strip()\n",
