Convert data into one line for one game

--- a/data_preperation.ipynb
+++ b/data_preperation.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Read in CSV File\n",
-    "season_box = pd.read_csv('season_box_scores_20182019.csv', converters={'GAME_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\n",
+    "season_box = pd.read_csv('data/box_scores/season_box_scores_20202021.csv', converters={'GAME_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\n",
     "season_games = pd.read_csv(\n",
-    "    'season_games_20182019.csv', converters={'Game_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\\\n",
+    "    'data/games/season_games_20202021.csv', converters={'Game_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\\\n",
     "\n",
     "# Define columns to keep from games dataframe\n",
     "col_keep = ['W_PCT', 'FG_PCT', 'FG3_PCT',\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove columns not needed\n",
+    "season_box.drop(['LEAGUE_ID', 'TEAM_ID', 'TEAM_CITY', 'GAME_DATE_EST', 'GAME_SEQUENCE',\n",
+    "                 'TEAM_ID.1', 'TEAM_ABBREVIATION.1', 'TEAM_CITY_NAME', 'TEAM_NICKNAME', 'TEAM_WINS_LOSSES', 'TEAM_TURNOVERS', 'TOTAL_TURNOVERS'], axis=1, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -55,16 +66,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>LEAGUE_ID</th>\n",
-       "      <th>TEAM_ID</th>\n",
        "      <th>TEAM_ABBREVIATION</th>\n",
-       "      <th>TEAM_CITY</th>\n",
        "      <th>PTS_PAINT</th>\n",
        "      <th>PTS_2ND_CHANCE</th>\n",
        "      <th>PTS_FB</th>\n",
        "      <th>LARGEST_LEAD</th>\n",
        "      <th>LEAD_CHANGES</th>\n",
        "      <th>TIMES_TIED</th>\n",
+       "      <th>TEAM_REBOUNDS</th>\n",
+       "      <th>PTS_OFF_TO</th>\n",
+       "      <th>GAME_ID</th>\n",
        "      <th>...</th>\n",
        "      <th>PTS_OT2</th>\n",
        "      <th>PTS_OT3</th>\n",
@@ -81,16 +92,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1610612745</td>\n",
        "      <td>HOU</td>\n",
-       "      <td>Houston</td>\n",
        "      <td>24</td>\n",
        "      <td>13</td>\n",
        "      <td>12</td>\n",
        "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0022001066</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -105,16 +116,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1610612737</td>\n",
        "      <td>ATL</td>\n",
-       "      <td>Atlanta</td>\n",
        "      <td>70</td>\n",
        "      <td>23</td>\n",
        "      <td>11</td>\n",
        "      <td>31</td>\n",
        "      <td>7</td>\n",
        "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0022001066</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -129,16 +140,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1610612753</td>\n",
        "      <td>ORL</td>\n",
-       "      <td>Orlando</td>\n",
        "      <td>38</td>\n",
        "      <td>21</td>\n",
        "      <td>8</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0022001049</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -153,16 +164,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1610612737</td>\n",
        "      <td>ATL</td>\n",
-       "      <td>Atlanta</td>\n",
        "      <td>42</td>\n",
        "      <td>10</td>\n",
        "      <td>12</td>\n",
        "      <td>30</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0022001049</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -177,16 +188,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1610612764</td>\n",
        "      <td>WAS</td>\n",
-       "      <td>Washington</td>\n",
        "      <td>58</td>\n",
        "      <td>15</td>\n",
        "      <td>13</td>\n",
        "      <td>13</td>\n",
        "      <td>3</td>\n",
        "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0022001042</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -201,53 +212,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   LEAGUE_ID     TEAM_ID TEAM_ABBREVIATION   TEAM_CITY  PTS_PAINT  \\\n",
-       "0          0  1610612745               HOU     Houston         24   \n",
-       "1          0  1610612737               ATL     Atlanta         70   \n",
-       "2          0  1610612753               ORL     Orlando         38   \n",
-       "3          0  1610612737               ATL     Atlanta         42   \n",
-       "4          0  1610612764               WAS  Washington         58   \n",
+       "  TEAM_ABBREVIATION  PTS_PAINT  PTS_2ND_CHANCE  PTS_FB  LARGEST_LEAD  \\\n",
+       "0               HOU         24              13      12             3   \n",
+       "1               ATL         70              23      11            31   \n",
+       "2               ORL         38              21       8             3   \n",
+       "3               ATL         42              10      12            30   \n",
+       "4               WAS         58              15      13            13   \n",
        "\n",
-       "   PTS_2ND_CHANCE  PTS_FB  LARGEST_LEAD  LEAD_CHANGES  TIMES_TIED  ...  \\\n",
-       "0              13      12             3             7           4  ...   \n",
-       "1              23      11            31             7           4  ...   \n",
-       "2              21       8             3             1           0  ...   \n",
-       "3              10      12            30             1           0  ...   \n",
-       "4              15      13            13             3           7  ...   \n",
+       "   LEAD_CHANGES  TIMES_TIED  TEAM_REBOUNDS  PTS_OFF_TO     GAME_ID  ...  \\\n",
+       "0             7           4              8          26  0022001066  ...   \n",
+       "1             7           4              7          14  0022001066  ...   \n",
+       "2             1           0             11          17  0022001049  ...   \n",
+       "3             1           0              9           9  0022001049  ...   \n",
+       "4             3           7              9           7  0022001042  ...   \n",
        "\n",
-       "   PTS_OT2  PTS_OT3  PTS_OT4  PTS_OT5 PTS_OT6  PTS_OT7 PTS_OT8  PTS_OT9  \\\n",
-       "0        0        0        0        0       0        0       0        0   \n",
-       "1        0        0        0        0       0        0       0        0   \n",
-       "2        0        0        0        0       0        0       0        0   \n",
-       "3        0        0        0        0       0        0       0        0   \n",
-       "4        0        0        0        0       0        0       0        0   \n",
+       "   PTS_OT2  PTS_OT3  PTS_OT4  PTS_OT5  PTS_OT6  PTS_OT7  PTS_OT8  PTS_OT9  \\\n",
+       "0        0        0        0        0        0        0        0        0   \n",
+       "1        0        0        0        0        0        0        0        0   \n",
+       "2        0        0        0        0        0        0        0        0   \n",
+       "3        0        0        0        0        0        0        0        0   \n",
+       "4        0        0        0        0        0        0        0        0   \n",
        "\n",
-       "  PTS_OT10  PTS  \n",
-       "0        0   95  \n",
-       "1        0  124  \n",
-       "2        0  116  \n",
-       "3        0   93  \n",
-       "4        0  120  \n",
+       "   PTS_OT10  PTS  \n",
+       "0         0   95  \n",
+       "1         0  124  \n",
+       "2         0  116  \n",
+       "3         0   93  \n",
+       "4         0  120  \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "season_box.head()\n"
+    "season_box.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,39 +279,50 @@
     "    # Make new dataframe out of both rows\n",
     "    df_team_one = df_game.iloc[0:1]\n",
     "    df_team_two = df_game.iloc[1:2]\n",
-    "    # Get row matching TEAM_ABBREVIATION and GAME_ID from season_box_clean\n",
+    "    # Get row matching TEAM_ABBREVIATION and GAME_ID from season_box\n",
     "    match_row_one = season_box[(season_box['TEAM_ABBREVIATION'] == team_one) & (\n",
     "        season_box['GAME_ID'] == id)]\n",
     "    match_row_two = season_box[(season_box['TEAM_ABBREVIATION'] == team_two) & (\n",
     "        season_box['GAME_ID'] == id)]\n",
-    "    # Concat match_row with df_teams and reset index\n",
+    "    # Reset index\n",
     "    match_row_one.reset_index(drop=True, inplace=True)\n",
     "    match_row_two.reset_index(drop=True, inplace=True)\n",
     "    df_team_one.reset_index(drop=True, inplace=True)\n",
     "    df_team_two.reset_index(drop=True, inplace=True)\n",
+    "    # Concat match_row with df_teams and\n",
     "    df_match_row_one = pd.concat([match_row_one, df_team_one], axis=1)\n",
     "    df_match_row_two = pd.concat([match_row_two, df_team_two], axis=1)\n",
+    "    # Append string '_1' to columns of df_match_row_two\n",
+    "    df_match_row_two = df_match_row_two.add_suffix('_1')\n",
+    "    # Append df_match_row_two to df_match_row_one as new columns\n",
+    "    df_one_line = pd.concat([df_match_row_one, df_match_row_two], axis=1)\n",
     "    # Concat to season_box_ext\n",
-    "    season_box_ext = pd.concat([season_box_ext, df_match_row_one, df_match_row_two])\n"
+    "    season_box_ext = pd.concat([season_box_ext, df_one_line])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'drop'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[48], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Drop TEAM_ABBREVIATION column\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m season_box_ext\u001b[39m.\u001b[39;49mdrop([\u001b[39m'\u001b[39m\u001b[39mTEAM_ABBREVIATION\u001b[39m\u001b[39m'\u001b[39m], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m \u001b[39m# write season_box_ext to csv\u001b[39;00m\n\u001b[1;32m      4\u001b[0m season_box_ext \u001b[39m=\u001b[39m season_box_ext\u001b[39m.\u001b[39mto_csv(\u001b[39m'\u001b[39m\u001b[39mseason_box_ext_20182019_one_line.csv\u001b[39m\u001b[39m'\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'drop'"
+     ]
+    }
+   ],
    "source": [
-    "season_box_ext.head()\n",
+    "# Drop TEAM_ABBREVIATION column\n",
+    "season_box_ext.drop(['TEAM_ABBREVIATION'], axis=1, inplace=True)\n",
     "# write season_box_ext to csv\n",
-    "season_box_ext = season_box_ext.to_csv('season_box_ext.csv', index=False)"
+    "season_box_ext = season_box_ext.to_csv('season_box_ext_20182019_one_line.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
