Added first labels

--- a/data_preperation.ipynb
+++ b/data_preperation.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Read in CSV File\n",
-    "season_box = pd.read_csv('data/box_scores/season_box_scores_20202021.csv', converters={'GAME_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\n",
-    "season_games = pd.read_csv(\n",
-    "    'data/games/season_games_20202021.csv', converters={'Game_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\\\n",
+    "# season_box = pd.read_csv('data/box_scores/season_box_scores_20182019.csv', converters={'GAME_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\n",
+    "# season_games = pd.read_csv('data/games/season_games_20182019.csv', converters={'Game_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\\\n",
+    "\n",
+    "# season_box = pd.read_csv('data/box_scores/season_box_scores_20192020.csv',\n",
+    "#                          converters={'GAME_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\n",
+    "# season_games = pd.read_csv('data/games/season_games_20192020.csv', converters={'Game_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\\\n",
+    "    \n",
+    "season_box = pd.read_csv('data/box_scores/season_box_scores_20202021.csv',\n",
+    "                         converters={'GAME_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\n",
+    "season_games = pd.read_csv('data/games/season_games_20202021.csv', converters={'Game_ID': str, 'TEAM_ABBREVIATION': str}, index_col=False)\\\n",
     "\n",
     "# Define columns to keep from games dataframe\n",
     "col_keep = ['W_PCT', 'FG_PCT', 'FG3_PCT',\n",
@@ -20,18 +27,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete all rows where TEAM_CITY and TEAM_CITY_NAME are not the same\n",
+    "# Error in Data Loading\n",
+    "season_box = season_box[season_box['TEAM_CITY'] == season_box['TEAM_CITY_NAME']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Group by GAME_ID in season_20_21_box and keep only first two rows\n",
     "season_box = season_box.groupby(\n",
-    "    'GAME_ID').head(2).reset_index(drop=True)"
+    "    'GAME_ID').head(2).reset_index(drop=True)\n",
+    "# Write to csv\n",
+    "pd.DataFrame.to_csv(season_box, 'tmp.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,223 +62,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TEAM_ABBREVIATION</th>\n",
-       "      <th>PTS_PAINT</th>\n",
-       "      <th>PTS_2ND_CHANCE</th>\n",
-       "      <th>PTS_FB</th>\n",
-       "      <th>LARGEST_LEAD</th>\n",
-       "      <th>LEAD_CHANGES</th>\n",
-       "      <th>TIMES_TIED</th>\n",
-       "      <th>TEAM_REBOUNDS</th>\n",
-       "      <th>PTS_OFF_TO</th>\n",
-       "      <th>GAME_ID</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PTS_OT2</th>\n",
-       "      <th>PTS_OT3</th>\n",
-       "      <th>PTS_OT4</th>\n",
-       "      <th>PTS_OT5</th>\n",
-       "      <th>PTS_OT6</th>\n",
-       "      <th>PTS_OT7</th>\n",
-       "      <th>PTS_OT8</th>\n",
-       "      <th>PTS_OT9</th>\n",
-       "      <th>PTS_OT10</th>\n",
-       "      <th>PTS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>HOU</td>\n",
-       "      <td>24</td>\n",
-       "      <td>13</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0022001066</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ATL</td>\n",
-       "      <td>70</td>\n",
-       "      <td>23</td>\n",
-       "      <td>11</td>\n",
-       "      <td>31</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0022001066</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ORL</td>\n",
-       "      <td>38</td>\n",
-       "      <td>21</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0022001049</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ATL</td>\n",
-       "      <td>42</td>\n",
-       "      <td>10</td>\n",
-       "      <td>12</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0022001049</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>WAS</td>\n",
-       "      <td>58</td>\n",
-       "      <td>15</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0022001042</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  TEAM_ABBREVIATION  PTS_PAINT  PTS_2ND_CHANCE  PTS_FB  LARGEST_LEAD  \\\n",
-       "0               HOU         24              13      12             3   \n",
-       "1               ATL         70              23      11            31   \n",
-       "2               ORL         38              21       8             3   \n",
-       "3               ATL         42              10      12            30   \n",
-       "4               WAS         58              15      13            13   \n",
-       "\n",
-       "   LEAD_CHANGES  TIMES_TIED  TEAM_REBOUNDS  PTS_OFF_TO     GAME_ID  ...  \\\n",
-       "0             7           4              8          26  0022001066  ...   \n",
-       "1             7           4              7          14  0022001066  ...   \n",
-       "2             1           0             11          17  0022001049  ...   \n",
-       "3             1           0              9           9  0022001049  ...   \n",
-       "4             3           7              9           7  0022001042  ...   \n",
-       "\n",
-       "   PTS_OT2  PTS_OT3  PTS_OT4  PTS_OT5  PTS_OT6  PTS_OT7  PTS_OT8  PTS_OT9  \\\n",
-       "0        0        0        0        0        0        0        0        0   \n",
-       "1        0        0        0        0        0        0        0        0   \n",
-       "2        0        0        0        0        0        0        0        0   \n",
-       "3        0        0        0        0        0        0        0        0   \n",
-       "4        0        0        0        0        0        0        0        0   \n",
-       "\n",
-       "   PTS_OT10  PTS  \n",
-       "0         0   95  \n",
-       "1         0  124  \n",
-       "2         0  116  \n",
-       "3         0   93  \n",
-       "4         0  120  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1056 entries, 0 to 1055\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column             Non-Null Count  Dtype \n",
+      "---  ------             --------------  ----- \n",
+      " 0   TEAM_ABBREVIATION  1056 non-null   object\n",
+      " 1   PTS_PAINT          1056 non-null   int64 \n",
+      " 2   PTS_2ND_CHANCE     1056 non-null   int64 \n",
+      " 3   PTS_FB             1056 non-null   int64 \n",
+      " 4   LARGEST_LEAD       1056 non-null   int64 \n",
+      " 5   LEAD_CHANGES       1056 non-null   int64 \n",
+      " 6   TIMES_TIED         1056 non-null   int64 \n",
+      " 7   TEAM_REBOUNDS      1056 non-null   int64 \n",
+      " 8   PTS_OFF_TO         1056 non-null   int64 \n",
+      " 9   GAME_ID            1056 non-null   object\n",
+      " 10  PTS_QTR1           1056 non-null   int64 \n",
+      " 11  PTS_QTR2           1056 non-null   int64 \n",
+      " 12  PTS_QTR3           1056 non-null   int64 \n",
+      " 13  PTS_QTR4           1056 non-null   int64 \n",
+      " 14  PTS_OT1            1056 non-null   int64 \n",
+      " 15  PTS_OT2            1056 non-null   int64 \n",
+      " 16  PTS_OT3            1056 non-null   int64 \n",
+      " 17  PTS_OT4            1056 non-null   int64 \n",
+      " 18  PTS_OT5            1056 non-null   int64 \n",
+      " 19  PTS_OT6            1056 non-null   int64 \n",
+      " 20  PTS_OT7            1056 non-null   int64 \n",
+      " 21  PTS_OT8            1056 non-null   int64 \n",
+      " 22  PTS_OT9            1056 non-null   int64 \n",
+      " 23  PTS_OT10           1056 non-null   int64 \n",
+      " 24  PTS                1056 non-null   int64 \n",
+      "dtypes: int64(23), object(2)\n",
+      "memory usage: 206.4+ KB\n"
+     ]
     }
    ],
    "source": [
-    "season_box.head()"
+    "season_box.head()\n",
+    "season_box.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,11 +132,14 @@
     "    # Make new dataframe out of both rows\n",
     "    df_team_one = df_game.iloc[0:1]\n",
     "    df_team_two = df_game.iloc[1:2]\n",
-    "    # Get row matching TEAM_ABBREVIATION and GAME_ID from season_box\n",
+    "    # # Get row matching TEAM_ABBREVIATION and GAME_ID from season_box\n",
     "    match_row_one = season_box[(season_box['TEAM_ABBREVIATION'] == team_one) & (\n",
     "        season_box['GAME_ID'] == id)]\n",
     "    match_row_two = season_box[(season_box['TEAM_ABBREVIATION'] == team_two) & (\n",
     "        season_box['GAME_ID'] == id)]\n",
+    "    # Check if match row one is empty\n",
+    "    if match_row_one.empty or match_row_two.empty:\n",
+    "        continue\n",
     "    # Reset index\n",
     "    match_row_one.reset_index(drop=True, inplace=True)\n",
     "    match_row_two.reset_index(drop=True, inplace=True)\n",
@@ -292,44 +148,22 @@
     "    # Concat match_row with df_teams and\n",
     "    df_match_row_one = pd.concat([match_row_one, df_team_one], axis=1)\n",
     "    df_match_row_two = pd.concat([match_row_two, df_team_two], axis=1)\n",
-    "    # Append string '_1' to columns of df_match_row_two\n",
-    "    df_match_row_two = df_match_row_two.add_suffix('_1')\n",
-    "    # Append df_match_row_two to df_match_row_one as new columns\n",
-    "    df_one_line = pd.concat([df_match_row_one, df_match_row_two], axis=1)\n",
     "    # Concat to season_box_ext\n",
-    "    season_box_ext = pd.concat([season_box_ext, df_one_line])"
+    "    season_box_ext = pd.concat(\n",
+    "        [season_box_ext, df_match_row_one, df_match_row_two])\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'drop'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[48], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Drop TEAM_ABBREVIATION column\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m season_box_ext\u001b[39m.\u001b[39;49mdrop([\u001b[39m'\u001b[39m\u001b[39mTEAM_ABBREVIATION\u001b[39m\u001b[39m'\u001b[39m], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m \u001b[39m# write season_box_ext to csv\u001b[39;00m\n\u001b[1;32m      4\u001b[0m season_box_ext \u001b[39m=\u001b[39m season_box_ext\u001b[39m.\u001b[39mto_csv(\u001b[39m'\u001b[39m\u001b[39mseason_box_ext_20182019_one_line.csv\u001b[39m\u001b[39m'\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'drop'"
-     ]
-    }
-   ],
-   "source": [
-    "# Drop TEAM_ABBREVIATION column\n",
-    "season_box_ext.drop(['TEAM_ABBREVIATION'], axis=1, inplace=True)\n",
-    "# write season_box_ext to csv\n",
-    "season_box_ext = season_box_ext.to_csv('season_box_ext_20182019_one_line.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write season_box_ext to csv\n",
+    "season_box_ext.to_csv(\n",
+    "    'data/box_scores/season_box_ext_20202021.csv', index=False)\n"
+   ]
   }
  ],
  "metadata": {
